--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@2.3.4
+        uses: actions/checkout@v2.3.4
       - name: JDK
         uses: actions/setup-java@v2.0.0
         with:
