--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-java@v2.0.0
         with:
           java-version: 1.8
+          distribuition: 'zulu'
           
       - name: Gradle
         run: ./gradle build
