--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
       - name: JDK
         uses: actions/setup-java@v2.0.0
         with:
-          java-version: 1.8
-          distribuition: 'zulu'
+          distribution: 'zulu'
+          java-version: '8'
           
       - name: Gradle
         run: ./gradle build
