--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '8'
           
       - name: Gradle
-        run: ./gradle build
+        run: ./gradlew build
         
       - name: APK
         uses: actions/upload-artifact@v2.2.3
